feat(jdk-codemodel): add withOptions and withEnablePreview to JdkInitializer